# RegularizacionYa

./: .gcloudignore  .gitignore  Dockerfile  Manual_Regularizacion_Extraordinaria.md  README.md  benchmark_document_service.py  chainlit.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.github/workflows/: deploy-cloudrun.yml  update-entidades.yml
chatregularizacion/: app.py  config.py
chatregularizacion/application/: agent_orchestrator.py
chatregularizacion/domain/: document.py  document_knowledge_base.py  entidad_colaboradora.py
chatregularizacion/infrastructure/: google_embedding_provider.py
chatregularizacion/utils/: validators.py
data/: Aclaraciones 30 enero.txt  ElTablero 6 Marzo.txt  Manual_Regularizacion_Extraordinaria.md  Manual_Regularizacion_Extraordinaria.sql  Manual_Regularizacion_Extraordinaria.txt  boe.xml  cancelar antecedentes penales.txt  entidades_colaboradoras.csv  regularizacion_extraordinaria_14_abril_OFICIAL.md
data/entidades/: entidades_colaboradoras.csv
data/manual/: 28bis_text.txt  28ter_text.txt  Charla Can Batlló - 05:03:2026.txt  El Tablero 27 Marzo.txt  Manual_Regularizacion_Extraordinaria.md  Tablero 27 Febrero.txt  Webinar 30 Marzo.txt  redwan baddouh Tablero 13-14Marzo.txt  regularizacion_extraordinaria_14_abril_OFICIAL.md  (+1 more)
migrations/: 001.chainlit-memory-schema.sql  002.knowledge_base.sql  003.Manual_Regularizacion_Extraordinaria.sql
public/: disclaimer.css  disclaimer.js
scripts/: extract_entidades_colaboradoras.py  ingest_knowledge.py
tests/: conftest.py
(+24 files in other folders)
